force-app/main/default/objects/Plan_Requirement__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Course associated with this Plan Requirement. Leave blank for a parent Plan Requirement with nested Plan Requirements.</description>
    <inlineHelpText>The Course associated with this Plan Requirement. Leave blank for a parent Plan Requirement with nested Plan Requirements.</inlineHelpText>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Plan Requirements</relationshipLabel>
    <relationshipName>Plan_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>