force-app/main/default/objects/Plan_Requirement__c/fields/Credits__c.field-meta.xml
<CustomField>
    <fullName>Credits__c</fullName>
    <description>The number of credits a student receives for satisfying this requirement.</description>
    <inlineHelpText>The number of credits a student receives for satisfying this requirement.</inlineHelpText>
    <label>Credits</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>