force-app/main/default/objects/Plan_Requirement__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The description of Plan Requirement.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>