force-app/main/default/objects/Plan_Requirement__c/fields/Plan_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Plan_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the Plan Requirement is one of multiple requirements or multiple levels of requirements, specifies the parent Plan Requirement. Use this field to group a list of optional Courses that satisfy a generic requirement.</description>
    <inlineHelpText>If the Plan Requirement is one of multiple requirements or multiple levels of requirements, specifies the parent Plan Requirement. Use this field to group a list of optional Courses that satisfy a generic requirement.</inlineHelpText>
    <label>Parent Plan Requirement</label>
    <referenceTo>Plan_Requirement__c</referenceTo>
    <relationshipLabel>Plan Requirements</relationshipLabel>
    <relationshipName>Plan_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>