force-app/main/default/objects/Plan_Requirement__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>This requirement&apos;s place in the Program Plan, for example, &quot;1&quot; indicates the first semester. Use this field to indicate the overall progression for the entire Program Plan, or to sort the order of sub-requirements within a single parent Plan Requirement.</description>
    <inlineHelpText>This requirement&apos;s place in the Program Plan, for example, &quot;1&quot; indicates the first semester. Use this field to indicate the overall progression for the entire Program Plan, or to sort the order of sub-requirements within a single parent Plan Requirement.</inlineHelpText>
    <label>Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>